# -histopathologic-cancer-detection

./: README.md  cancer_cnn.ipynb  pyproject.toml
