[tool.poetry]
name = "histo-cancer-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "2.0.1"
torchvision = "0.15.2"
pandas = "1.5.3"
numpy = "1.23.5"
Pillow = "9.5.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
